--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
-Source: lshw
-Section: ubuntu/utils
+Source: lshw-static-udeb
+Section: utils
 Priority: optional
-Maintainer: Ghe Rivero <ghe@debian.org>
+Maintainer: Ryan Niebur <ryan@debian.org>
+Uploaders: Vagrant Cascadian <vagrant@freegeek.org>
 Build-Depends: debhelper (>> 6.0.0), libgtk2.0-dev, quilt, libsqlite3-dev
 Standards-Version: 3.9.1
 
